--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,16 +2,16 @@
    height: 100%;
    display: grid;
    background-color: #dbdabd;
-   grid-template-rows: 3fr 2fr 4fr;
+   grid-template-rows: 1fr 0.5fr 1fr 0.35fr;
    grid-template-columns: 2fr 6fr 2fr;
 }
 .slideShowHolder {
    padding-bottom: 1px;
-   grid-row: 1/3;
+   grid-row: 1/2;
    grid-column: 1/4;
 }
 .landingPageBreak {
-   grid-row: 3/4;
+   grid-row: 2/3;
    grid-column: 1/4;
    background-image: url("../assets/landingPic1.png");
    background-repeat: no-repeat;
@@ -19,7 +19,7 @@
 }
 
 .bottomCardSection {
-   grid-row: 4/5;
+   grid-row: 3/4;
    grid-column: 1/4;
    display: grid;
    padding-top: 3%;
@@ -29,5 +29,7 @@
 }
 
 .footer {
-   grid-row: 5/6;
+   grid-row: 4/5;
+   grid-column: 1/4;
+   border: 1px solid black;
 }
