--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,5 +1,44 @@
 .custom-content {
-   display: gridl;
-   grid-template-columns: 1fr 1fr;
-   grid-template-rows: 1fr 1fr;
+   display: grid;
+   height: 100%;
+   width: 100%;
+   min-width: 100%;
+   grid-template-columns: 10% 80% 10%;
+   grid-template-rows: 15% 80% 15%;
+   grid-template-areas:
+      ". . ."
+      ". loginForm ."
+      ". . .";
+   align-items: center;
+}
+
+.custom-container {
+   grid-area: loginForm;
+   width: 40%;
+   height: 40%;
+   justify-self: center;
+   box-shadow: 1px 5px 5px 5px rgb(12, 12, 12, 0.6);
+   padding-left: 5%;
+   padding-right: 5%;
+   border-radius: 50px;
+   transition: 0.5s;
+}
+.custom-container:hover {
+   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+button:hover {
+   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+button {
+   border-radius: 20px;
+   border-color: white;
+   transition: 0.5s;
+}
+p {
+   font-size: 14px;
+   font-weight: 1000;
+}
+
+.form-control {
+   border-radius: 40px;
 }
