--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -1,4 +1,4 @@
-.custom-content-login {
+.custom-content-register {
    display: grid;
    height: 100%;
    width: 100%;
@@ -13,10 +13,10 @@
    background-color: #2a672e;
 }
 
-.custom-container-login {
+.custom-container-register {
    grid-area: loginForm;
-   width: 40%;
-   height: 40%;
+   width: 50%;
+   height: 65%;
    justify-self: center;
    box-shadow: 1px 5px 5px 5px rgb(12, 12, 12, 0.6);
    padding-left: 5%;
@@ -27,10 +27,6 @@
 }
 .custom-container:hover {
    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
-}
-button:hover {
-   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-   background-color: #6d1a16;
 }
 
 button {
@@ -45,7 +41,7 @@ h2 {
    padding-top: 2%;
    color: #b573ac;
 }
-.custom-login-p {
+.custom-register-p {
    font-size: 17px;
    font-weight: 1000;
    color: #b573ac;
@@ -54,16 +50,20 @@ h2 {
 .form-control {
    border-radius: 40px;
 }
+.image-button {
+   border-radius: 50px;
+   color: #b573ac;
+}
 
 @media only screen and (min-width: 150px) and (max-width: 380px) {
-   .custom-container-login {
-      height: 50% !important;
+   .custom-container-register {
+      height: 65% !important;
       width: 100%;
    }
 }
 @media only screen and (min-width: 381px) and (max-width: 700px) {
-   .custom-container-login {
-      height: 50%;
+   .custom-container-register {
+      height: 65%;
       width: 100%;
    }
 }
