--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -7,26 +7,54 @@
    grid-template-rows: 15% 80% 15%;
    grid-template-areas:
       ". . ."
-      ". loginForm ."
+      ". profile ."
       ". . .";
    align-items: center;
    background-color: #2a672e;
 }
 
 .custom-container-profile {
-   grid-area: loginForm;
+   grid-area: profile;
+   display: grid;
+   grid-template-rows: 25% 75%;
+   grid-template-columns: 100%;
    width: 30%;
    height: 90%;
    box-shadow: 1px 5px 5px 5px rgb(12, 12, 12, 0.6);
-   padding-left: 5%;
-   padding-right: 5%;
+
    border-radius: 50px;
    transition: 0.5s;
    z-index: 1;
    background-color: #6d1a16;
+   grid-template-areas:
+      "profileImg"
+      "profileText";
+}
+.profileImgHolder {
+   margin: auto;
+   padding-top: 5%;
+   padding-left: 15%;
+   padding-right: 15%;
+}
+h3,
+h4 {
+   text-align: end;
+   font-size: 18px !important;
+   color: #f2f2f0 !important;
+   overflow-wrap: break-word;
+}
+.profileText {
+   padding-top: 5%;
+   padding-right: 3%;
+}
+.profileImg {
+   grid-area: profileImg;
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
 }
 .custom-container-achievements {
-   grid-area: loginForm;
+   grid-area: profile;
    width: 75%;
    height: 65%;
    justify-self: end;
@@ -39,7 +67,12 @@
    padding: 0;
    margin: 0;
    grid-template-columns: 10% 85%;
-   grid-template-areas: ". achievements";
+   grid-template-rows: 90% 10%;
+   grid-template-areas:
+      ". achievements"
+      ". paging";
+
+   padding-bottom: 10px;
 
    background-color: #6d1a16;
 }
@@ -62,9 +95,26 @@
    margin: 10px 0;
    grid-area: achieves;
 }
+.paging:hover {
+   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+   background-color: #6d1a16;
+}
+.next {
+   margin-left: auto;
+}
+.prev {
+   margin-right: auto;
+}
 .paging {
-   float: right;
-   height: 5%;
+   border-radius: 20px;
+   border-color: white;
+   transition: 0.5s;
+   width: 25%;
+
+   color: #b573ac;
+   font-weight: 1000;
+   font-size: 20px;
+   grid-area: paging;
 }
 .darker {
    border-color: #ccc;
@@ -84,14 +134,12 @@
    margin-right: 0;
 }
 
-/*
-
-@media only screen and (min-width: 150px) and (max-width: 380px) {
-   .custom-container-register {
-      height: 65% !important;
-      width: 100%;
+@media only screen and (min-width: 150px) and (max-width: 500px) {
+   .custom-container-achievements {
+      height: 100%;
    }
 }
+/*
 @media only screen and (min-width: 381px) and (max-width: 700px) {
    .custom-container-register {
       height: 65%;
