--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,16 @@
-* {
-   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-      "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-
-   font-size: 16px;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+li {
+   font-family: "Droid Arabic Kufi" !important;
 }
 
-body {
-   margin: 0;
-   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-      "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
-   background-color: #e6e4d9 !important;
-}
-
-code {
-   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+h4,
+h3 {
+   text-align: center !important;
 }
