--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -138,7 +138,10 @@
 
 @media only screen and (min-width: 150px) and (max-width: 500px) {
    .custom-container-achievements {
-      height: 100%;
+      visibility: hidden;
+   }
+   .custom-container-profile {
+      width: 100%;
    }
 }
 /*
