--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -3,12 +3,56 @@
    height: 100%;
    width: 100%;
    min-width: 100%;
-   grid-template-columns: 10% 80% 10%;
-   grid-template-rows: 12% 80% 15%;
+   grid-template-columns: 5% 20% 2% 73%;
+   grid-template-rows: 12% 88%;
    grid-template-areas:
-      ". . ."
-      ". profile ."
-      ". . .";
-   align-items: center;
-   background-color: #2a672e;
+      ". . . . "
+      ". profile . search";
+   background-color: #f2f2f0;
+}
+.main-search-container {
+   grid-area: search;
+}
+.custom-posts-table {
+   overflow-x: auto;
+}
+.profile-card {
+   grid-area: profile;
+}
+.event-description {
+   color: #b573ac;
+}
+.custom-container-profile-search {
+   grid-area: profile;
+   display: grid;
+   grid-template-rows: 50% 50%;
+   grid-template-columns: 100%;
+   width: 30%;
+   height: 90%;
+   box-shadow: 1px 5px 5px 5px rgb(12, 12, 12, 0.6);
+
+   border-radius: 50px;
+   transition: 0.5s;
+   z-index: 1;
+   background-color: #6d1a16;
+   grid-template-areas:
+      "profileImg"
+      "profileText";
+   width: 100%;
+   height: 50%;
+}
+
+table {
+   border-collapse: collapse;
+   width: 100%;
+}
+
+th,
+td {
+   text-align: right;
+   padding: 8px;
+}
+
+tr:nth-child(even) {
+   background-color: #f2f2f2;
 }
