switched to cookies set local font still needs to work on the event page linked the props correctly

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,12 @@ li,
 label,
 td,
 tr {
-   font-family: "Droid Arabic Kufi" !important;
+   font-family: "CustomFont" !important;
+}
+
+@font-face {
+   font-family: CustomFont;
+   src: url(/src/styles/fonts/DroidKuffi.ttf);
 }
 
 h4,
