Done with register and made sure to submit to server

--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -53,6 +53,7 @@
    color: #b573ac;
 }
 .vol-inputs {
+   height: 100%;
    grid-area: volInput;
    display: grid;
    grid-template-columns: 70% 30%;
