--- a/src/styles/newEvent.css
+++ b/src/styles/newEvent.css
@@ -36,7 +36,9 @@
 .new-event-title {
    grid-area: title;
    display: flex;
-   margin: 2%;
+   margin-left: 2%;
+   margin-top: 1%;
+   margin-right: 2%;
    justify-content: space-between;
 }
 .custom-input-title {
