--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -1,18 +1,11 @@
 .custom-content-register {
-   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-   background-size: 400% 400%;
-   animation: gradient 5s ease infinite;
-
    display: grid;
    height: 100%;
    width: 100%;
    min-width: 100%;
    grid-template-columns: 10% 80% 10%;
-   grid-template-rows: 15% 80% 15%;
-   grid-template-areas:
-      ". . ."
-      ". registerForm ."
-      ". . .";
+   grid-template-rows: 100%;
+   grid-template-areas: ". registerForm .";
    align-items: center;
    background-color: #f2f2f0;
 }
@@ -21,6 +14,7 @@
 }
 
 .custom-container-register {
+   z-index: 1;
    grid-area: registerForm;
    display: grid;
    width: 70%;
@@ -121,17 +115,7 @@
       background-color: #f2f2f0;
    }
 }
-@keyframes gradient {
-   0% {
-      background-position: 0% 50%;
-   }
-   50% {
-      background-position: 100% 50%;
-   }
-   100% {
-      background-position: 0% 50%;
-   }
-}
+
 /* 
 @media only screen and (min-width: 381px) and (max-width: 700px) {
    .custom-container-register {
