--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,38 +1,127 @@
 .custom-search-content {
    display: grid;
-   height: 100%;
+   height: 300%;
    width: 100%;
-   grid-template-columns: 5% 20% 2% 73%;
-   grid-template-rows: 12% 44% 44%;
+   grid-template-columns: 10% 80% 10%;
+   grid-template-rows: 5% 2% 90% 3%;
    grid-template-areas:
-      ". . . . "
-      ". profileCard . events"
-      ". searchQuery . events";
+      ". searchTags . "
+      ". . ."
+      ". events . "
+      ". nextprev .";
    background-color: #f2f2f0;
 }
-.main-search-container {
-   width: 100%;
-   grid-area: events;
+.nextPrevBtns {
+   grid-area: nextprev;
+   display: flex;
 }
+.prev,
+.next {
+   width: 10% !important;
+   height: 70% !important;
+}
+
+.eventsList {
+   grid-area: events;
+   display: flex;
+   flex-direction: column;
+}
+.single-event {
+   width: 100%;
+   height: 10%;
+   margin-bottom: 5%;
+}
+.eventDescription {
+   width: 100%;
+   height: 100%;
+   display: grid;
+   grid-template-columns: 65% 5% 30%;
+   grid-template-rows: 15% 15% 50% 20%;
+   grid-template-areas:
+      "eventName . eventImg"
+      "organdDate . eventImg"
+      "eventDesc . eventImg"
+      "moreDetailsButton . eventImg";
+}
+.orgAndDate {
+   grid-area: organdDate;
+   display: grid;
+   grid-template-columns: 50% 50%;
+   grid-template-rows: 100%;
+   grid-template-areas: "date orga";
+}
+.single-event-date {
+   grid-area: date;
+}
+.single-event-name {
+   grid-area: eventName;
+}
+.single-event-org {
+   grid-area: orga;
+}
+.single-event-img {
+   grid-area: eventImg;
+   width: 70%;
+   height: 70%;
+   align-self: center;
+   justify-self: center;
+}
+.single-event-p {
+   font-size: 20px;
+   font-weight: bold;
+   text-align: right;
+}
+.single-event-desc {
+   grid-area: eventDesc;
+}
+.details-button:hover {
+   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+   color: #b573ac;
+   background-color: #6d1a16;
+}
+.details-button {
+   grid-area: moreDetailsButton;
+   border-radius: 20px;
+   text-align: center;
+   width: 30%;
+   justify-self: start;
+   height: 100%;
+   border-color: white;
+   transition: 0.5s;
+   color: #b573ac;
+   font-weight: 1000;
+   font-size: 20px;
+}
+
+.searchTagsList {
+   grid-area: searchTags;
+   display: grid;
+   grid-template-rows: 70% 30%;
+   grid-template-columns: 100%;
+   grid-template-areas:
+      "tags"
+      "tagButton";
+}
+
 .tagLabel {
-   font-size: 15px;
+   font-size: 20px !important;
    font-weight: bold;
    color: #b573ac;
 }
-.search-row-img {
-   width: 10%;
-}
-.search-img-row {
-   margin: 0;
-   width: 60%;
-   display: table-cell !important;
+.tagsHolder {
+   grid-area: tags;
+   display: flex;
+   justify-content: space-around;
+   align-content: space-around;
 }
 
 .search-button {
+   grid-area: tagButton;
    border-radius: 20px;
-   border-color: white;
    width: 50%;
-   height: 70%;
+   justify-self: center;
+   height: 100%;
+   border-color: white;
    transition: 0.5s;
    color: #b573ac;
    font-weight: 1000;
@@ -42,113 +131,11 @@
    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
    background-color: #6d1a16;
 }
-.upper-grid-search {
-   display: grid;
-   justify-content: center;
-   align-content: center;
-   grid-template-rows: 20% 20% 20% 20% 20%;
-   grid-template-columns: 50% 50%;
-   justify-items: center;
-   align-items: center;
-   grid-area: upperGrid;
-}
-.lower-grid-search {
-   display: grid;
-   grid-template-columns: 100%;
-   grid-template-rows: 100%;
-   align-items: center;
-   justify-items: center;
-   grid-area: lowerGrid;
-}
-.searchQuery {
-   display: grid;
-   grid-template-rows: 80% 20%;
-   grid-template-columns: 100%;
-   background-color: #f2f2f0;
-   z-index: 0;
-   grid-template-areas:
-      "upperGrid"
-      "lowerGrid";
-   grid-area: searchQuery;
-}
-.custom-posts-table {
-   margin-right: 5%;
-   overflow-x: auto;
-   overflow-y: auto;
-}
-.profile-card {
-   grid-area: profileCard;
-   height: 100%;
-   width: 80%;
-}
-.event-description {
-   color: #b573ac;
-}
-.custom-container-profile-search {
-   grid-area: profile;
-   display: grid;
-   grid-template-rows: 50% 50%;
-   grid-template-columns: 100%;
-   width: 30%;
-   height: 100% !important;
-   box-shadow: 1px 5px 5px 5px rgb(12, 12, 12, 0.6);
 
-   border-radius: 50px;
-   transition: 0.5s;
-   z-index: 2;
-   background-color: #6d1a16;
-   grid-template-areas:
-      "profileImg"
-      "profileText";
-   width: 100%;
-   height: 50%;
-}
-
-table {
-   border-collapse: collapse;
-   width: 100%;
-}
-
-th,
-td {
-   text-align: right;
-   padding: 8px;
-}
-
-tr:nth-child(even) {
-   background-color: #f2f2f2;
-}
-
-@media (max-width: 800px) {
-   .custom-search-content {
-      grid-template-rows: 20% 15% 5% 60%;
-      grid-template-columns: 100%;
-      grid-template-areas:
-         "."
-         "searchQuery"
-         "."
-         "events";
-   }
-   .profile-card {
-      visibility: hidden;
-   }
-   .custom-container-profile-search {
-      display: none;
-   }
-   .searchQuery {
-      display: grid;
-      grid-template-rows: 50% 50%;
-      grid-template-columns: 100%;
-      grid-template-areas:
-         "upperGrid"
-         "lowerGrid";
-      grid-area: searchQuery;
-   }
-   .upper-grid-search {
-      display: grid;
-      justify-items: center;
-      grid-template-rows: 50% 50%;
-      grid-template-columns: 20% 20% 20% 20% 20%;
-      grid-area: upperGrid;
+@media only screen and (min-width: 150px) and (max-width: 800px) {
+   .prev,
+   .next {
+      width: 40% !important;
+      height: 70% !important;
    }
 }
