--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -3,13 +3,14 @@
    height: 100%;
    width: 100%;
    min-width: 100%;
-   z-index: 2;
 
    align-items: center;
    background-color: #f2f2f0;
 }
 
 .loginFormHolder {
+   z-index: 1;
+   background-color: #f2f2f0;
    box-shadow: 1px 5px 5px 5px rgb(12, 12, 12, 0.6);
    border-radius: 50px;
    transition: 0.5s;
