--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,188 +1,60 @@
 .custom-content-profile {
-   display: grid;
-   height: 100%;
    width: 100%;
-   min-width: 100%;
+   height: 100%;
+   display: grid;
    grid-template-columns: 10% 80% 10%;
-   grid-template-rows: 15% 80% 15%;
-   grid-template-areas:
-      ". . ."
-      ". profile ."
-      ". . .";
-   align-items: center;
-   background-color: #f2f2f0;
+   grid-template-rows: 100%;
 }
-
-.custom-container-profile {
-   grid-area: profile;
+.FrontCard {
+   margin-top: 15%;
    display: grid;
-   grid-template-rows: 25% 65% 10%;
-   grid-template-columns: 100%;
-   width: 30%;
-   height: 90%;
-   box-shadow: 1px 5px 5px 5px rgb(12, 12, 12, 0.6);
-
-   border-radius: 50px;
-   transition: 0.5s;
-   z-index: 1;
-   background-color: #6d1a16;
+   grid-template-columns: 70% 30%;
+   grid-template-rows: 85% 15%;
+   margin-left: 15%;
+   z-index: 2;
+   background-color: #f2f2f0;
    grid-template-areas:
-      "profileImg"
-      "profileText"
-      "changeSettingsBtn";
+      ". ."
+      ". .";
+   width: 70%;
+   height: 50%;
+   box-shadow: 5px 1px 5px 5px rgba(0, 0, 0, 0.2);
+   border-radius: 25px;
 }
-.profileImgHolder {
-   margin: auto;
-   padding-top: 5%;
-   padding-left: 15%;
-   padding-right: 15%;
-}
-.profile-name,
-.profile-email,
-.profile-ssn,
-.profile-mobile {
-   text-align: end;
-   font-size: 18px !important;
-   color: #f2f2f0 !important;
-   overflow-wrap: break-word;
-}
-.profileText {
-   padding-top: 5%;
-   padding-right: 3%;
-   grid-area: profileText;
-}
-.profileImg {
-   grid-area: profileImg;
+.information {
    width: 100%;
    height: 100%;
-   border-radius: 50%;
+   text-align: right;
+   padding-top: 10%;
 }
-.custom-container-achievements {
-   grid-area: profile;
-   width: 75%;
-   height: 65%;
-   justify-self: end;
-   box-shadow: 1px 5px 5px 5px rgb(12, 12, 12, 0.6);
-   padding-left: 5%;
-   padding-right: 5%;
-   border-radius: 50px;
-   transition: 0.5s;
-   display: grid;
-   padding: 0;
-   margin: 0;
-   grid-template-columns: 10% 85%;
-   grid-template-rows: 90% 10%;
-   grid-template-areas:
-      ". achievements"
-      ". paging";
-
-   padding-bottom: 10px;
-
-   background-color: #6d1a16;
+.flipButtonHolder {
+   display: flex;
+   justify-content: center;
+   align-content: center;
 }
-.custom-container-profile:hover {
-   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
-}
-.custom-container-achievements:hover {
-   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.2);
-}
-.all-achievements {
-   grid-area: achievements;
-}
-.single-achievement {
-   border: 2px solid #dedede;
-   background-color: #f1f1f1;
-   border-radius: 50px;
-   width: 100%;
-   height: 20%;
-   padding: 15px;
-   margin: 10px 0;
-   grid-area: achieves;
-}
-.paging:hover {
-   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-   background-color: #6d1a16;
-}
-.change-settings:hover {
-   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-   background-color: #6d1a16;
-}
-.change-settings {
-   grid-area: changeSettingsBtn;
-   border-radius: 20px;
-   border-color: white;
-   transition: 0.5s;
-   width: 50%;
-   margin-left: 25%;
-   color: #b573ac;
-   font-weight: 1000;
+.profileFont {
    font-size: 20px;
+   font-weight: bold;
 }
-.next {
-   margin-left: auto;
-}
-.prev {
-   margin-right: auto;
-}
-.paging {
-   border-radius: 20px;
-   border-color: white;
-   transition: 0.5s;
-   width: 25%;
-
-   color: #b573ac;
-   font-weight: 1000;
-   font-size: 20px;
-   grid-area: paging;
-}
-.darker {
-   border-color: #ccc;
-   background-color: #ddd;
-}
-.single-achievement img {
-   float: left;
-   max-width: 40px;
+.imageHolder {
    width: 100%;
-   margin-right: 20px;
+   height: 100%;
+   display: flex;
+   padding-top: 5%;
+   justify-content: center;
+}
+.profileImage {
+   width: 80%;
+   height: 50%;
    border-radius: 50%;
 }
 
-.single-achievement img.right {
-   float: right;
-   margin-left: 20px;
-   margin-right: 0;
+.BackCard {
+   margin-top: 15%;
+   background-color: #f2f2f0;
+   margin-left: 15%;
+   width: 70%;
+   box-shadow: 5px 1px 5px 5px rgba(0, 0, 0, 0.2);
+   border-radius: 25px;
+   height: 50%;
 }
-
-@media only screen and (min-width: 150px) and (max-width: 500px) {
-   .custom-content-profile {
-      height: 210%;
-      display: grid;
-      grid-template-rows: 10% 50% 50%;
-      grid-template-columns: 100%;
-      grid-template-areas:
-         "."
-         "first"
-         "second";
-   }
-   .custom-container-achievements {
-      grid-area: second;
-      height: 100%;
-      width: 100%;
-   }
-   .custom-container-profile {
-      grid-area: first;
-      width: 100%;
-      height: 100%;
-   }
-   .profileText {
-      margin-top: 40%;
-   }
-}
-/*
-@media only screen and (min-width: 381px) and (max-width: 700px) {
-   .custom-container-register {
-      height: 65%;
-      width: 100%;
-   }
-}
-*/
