--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -35,6 +35,7 @@
    width: 100%;
    height: 100%;
    display: grid;
+   box-shadow: 5px 15px 5px 5px rgba(0, 0, 0, 0.2);
    grid-template-columns: 65% 5% 30%;
    grid-template-rows: 15% 15% 50% 20%;
    grid-template-areas:
