--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,12 +1,14 @@
 #topBanner {
-   background: #2c389c;
-   background: linear-gradient(to right, #2c389c 0%, #2c389c 28%, #2c389c 69%, #2c389c 100%);
+   background: #f2f2f0;
+   /* background: linear-gradient(to right, #2c389c 0%, #2c389c 28%, #2c389c 69%, #2c389c 100%); */
+   background-repeat: no-repeat;
+   background-image: url("../assets/bannerBackGround.jpg");
    width: 100%;
    height: 25%;
 }
 
 #bannerH1 {
-   color: #f2f2f0;
+   color: #5b93e8;
    text-align: right;
    margin-right: 2%;
    padding-top: 3%;
