--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -27,14 +27,14 @@
 
 .registerBtn {
    font-size: 25px;
-   border-radius: 50px;
+   font-family: CustomFont;
 }
 .custom-container-register {
    z-index: 1;
    grid-area: registerForm;
    display: grid;
    width: 50%;
-   height: 80%;
+   height: 85%;
    grid-template-rows: 100%;
    grid-template-columns: 100%;
    justify-self: center;
@@ -85,19 +85,16 @@
    }
    .custom-content-register {
       display: grid;
-      height: 100%;
+      height: 110%;
       width: 100%;
       min-width: 100%;
       grid-template-columns: 100%;
-      grid-template-rows: 15% 85%;
-      grid-template-areas:
-         "."
-         " registerForm ";
+      grid-template-rows: 100%;
+      grid-template-areas: " registerForm ";
       align-items: center;
       background-color: #f2f2f0;
    }
 }
-
 /* 
 @media only screen and (min-width: 381px) and (max-width: 700px) {
    .custom-container-register {
