--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -48,12 +48,17 @@
    height: 50%;
    border-radius: 50%;
 }
-
+.navShortner {
+   height: 10%;
+}
 .BackCard {
    margin-top: 15%;
    background-color: #f2f2f0;
    margin-left: 15%;
    width: 70%;
+   display: flex !important;
+   align-items: center !important;
+   justify-content: center !important;
    box-shadow: 5px 1px 5px 5px rgba(0, 0, 0, 0.2);
    border-radius: 25px;
    height: 50%;
