--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,6 +207,7 @@ a:focus,
 .intro {
    display: table;
    width: 100%;
+   height: 100%;
    padding: 0;
    background: url(../img/intro-bg.jpg) center center no-repeat;
    background-color: #e5e5e5;
