--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,3 +1,7 @@
+#navbarCollapse3 {
+   background-color: #eac837 !important;
+}
+
 .customNavibar {
    height: 15% !important;
    background-color: #eac837 !important;
