--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -25,6 +25,7 @@
    width: 100%;
    height: 100%;
    text-align: right;
+   direction: rtl;
    padding-top: 10%;
 }
 .flipButtonHolder {
@@ -35,6 +36,7 @@
 .profileFont {
    font-size: 20px;
    font-weight: bold;
+   direction: rtl;
 }
 .imageHolder {
    width: 100%;
